# GameDock

./: .clang-format  .clang-format-ignore  .gitmodules  CMakeLists.txt  README.md  changelog.md  format.sh  main.cpp
.github/workflows/: lint.yml  release.yml  testing.yml
common/: CMakeLists.txt
common/archive/: archive.hpp
common/component/: debug_window.cpp  debug_window.hpp
common/dock/: config.hpp  dock.cpp  dock.hpp  interface.hpp  lobby.cpp  lobby.hpp  modeSelector.cpp  modeSelector.hpp  state.hpp
common/game/: client.hpp  plugin.hpp
common/grpc/: core_client.cpp  core_client.hpp
common/tests/: CMakeLists.txt  hello.cpp
dock/: CMakeLists.txt  dock.cpp  dock.h
dock/component/: CMakeLists.txt  debug_window.hpp  empty_component.hpp  game_settings_ctrl.hpp  non_border_button.hpp  option.hpp  poly_component.hpp  text_center_button.hpp
dock/core/: common.h  component.h  game_attr.h  game_attr_fac.h  state.h  state_machine.h  ui_proxy.h
dock/screen/: CMakeLists.txt  game_screen.hpp  lobby_screen.hpp  login_screen.hpp  room_screen.hpp
dock/tests/: CMakeLists.txt  hello.cpp  interactive_ui_test.cpp  lobby_screen_test.cpp  login_screen_test.cpp  main.cpp  matcher.h  mock_stream.h  room_screen_test.cpp  screen_fixture.h
dock/tests/screen_tests/: CMakeLists.txt  lobby_screen_test.cpp  login_screen_test.cpp  main.cpp  room_screen_test.cpp
dock/util/: dom.cpp  dom.hpp  logger.h  util.hpp
games/: CMakeLists.txt
games/tetris/: CMakeLists.txt
games/tetris/include/tetris/: tetrisBox.hpp
games/tetris/src/: tetrisBox.cpp
games/texas/: CMakeLists.txt
games/texas/core/: CMakeLists.txt  game_attr.h  state_machine.cpp  state_machine.h
games/texas/ui/component/: game_settings_ctrl.hpp
games/uno/: CMakeLists.txt
games/uno/core/: CMakeLists.txt  game_attr.h  logger.h  state.cpp  state.h  state_machine.cpp  state_machine.h
games/uno/src/: CMakeLists.txt  game_screen.h  state.cpp  state.h  state_machine.cpp  state_machine.h  util.h
games/uno/test/: CMakeLists.txt  main.cpp  matcher.h  uno_screen_test.cpp
games/uno/ui/: component.h  dom.hpp  game_screen.hpp
games/uno/ui/component/: colorful_button.hpp  game_settings_ctrl.hpp  handcards_selector.hpp
games/uno/ui/panel/: choose_card.hpp  game_over.hpp  not_my_turn.hpp  play_immediately.hpp  play_or_pass.hpp  specify_color.hpp  uno_panel.hpp
include/tetris/: tetrisBox.hpp
src/tetris/: tetrisBox.cpp
